# sfml-template

./: .gitmodules  CMakeLists.txt  README.md
include/: Animation.h  Assets.h  CMakeLists.txt  Colors.h  Command.h  Config.h  DemoState.h  Game.h  Log.h  MessageBus.h  MessageTypes.h  Particle.h  ParticleSystem.h  Random.h  Resouces.h  Resources.h  RoundedRectangle.h  SfmlUtil.h  SfmlUtil.tpp  State.h  StateManager.h  TileMap.h  pch.h  resource_holder.h  resource_holder.tcc  resource_identifiers.h
include/ExampleStates/: AnimationState.h  DemoState.h  MainMenu.h  Map.h  ParticlesState.h  XOState.h
include/Gui/: boundText.h  button.h
include/StateComponents/: Camera.h
include/States/: AnimationState.h  Camera.h  Chat.h  DemoState.h  FontTest.h  MainMenu.h  Map.h  PaddleState.h  ParticlesState.h  Player.h  XOState.h  imguiTest.h
include/Swoosh/Swoosh/: Activity.h  ActivityController.h  Segue.h
include/imgui/: CMakeLists.txt  imconfig.h  imgui-SFML.h
lib/: CMakeLists.txt
resources/: CMakeLists.txt
src/: CMakeLists.txt  Game.cpp  ParticleSystem.cpp  StateManager.cpp  main.cpp
src/Impl/: Animation.cpp  Game.cpp  ParticleSystem.cpp  RoundedRectangle.cpp  StateManager.cpp
tests/: CMakeLists.txt  StateManager_test.cpp
